--- a/luci-app-argon-config/po/zh-cn/argon-config.po
+++ b/luci-app-argon-config/po/zh-cn/argon-config.po
@@ -12,7 +12,7 @@ msgstr ""
 "X-Generator: Poedit 2.3.1\n"
 
 msgid "Argon Config"
-msgstr "Argon 主题设置"
+msgstr "主题设置"
 
 msgid "Here you can set the blur and transparency of the login page of argon theme, and manage the background pictures and videos.[Chrome is recommended]"
 msgstr "在这里你可以设置argon 主题的登录页面的模糊和透明度，并管理背景图片与视频。[建议使用 Chrome]"
@@ -56,6 +56,9 @@ msgstr "十六进制颜色值 ( 预设为：#483d8b )"
 msgid "[Light mode] Transparency"
 msgstr "[亮色模式] 透明度"
 
+msgid "[Light mode] Transparency"
+msgstr "[亮色模式] 透明度"
+
 msgid "[Dark mode] Transparency"
 msgstr "[暗色模式] 透明度"
 
@@ -88,6 +91,7 @@ msgstr "无法打开文件："
 
 msgid "Create upload file error."
 msgstr "创建上传文件失败。"
+
 
 msgid "File name"
 msgstr "文件名"
